--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 
     <!-- CSS Link -->
     <link rel="stylesheet" href="style/future.css">
+
+    <!-- Font Awesome Link -->
+    <script src="https://kit.fontawesome.com/58cad9c624.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header class="banner">
         <div class="header-items">
-            <h1 class="banner-heading">All Thinks Are Possible If You believe</h1>
-            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <h1 class="banner-heading">All Thinks Are Possible If You Believe</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words</p>
             <button class="contact-us-btn primary-btn">Contact Us</button>
         </div>
     </header>
@@ -22,19 +26,48 @@
     <main>
         <!-- Our Failure Section -->
         <section class="failure-section">
-            <div>
+            <div class="bgc-img">
                 <img class="dr-luna" src="images/person.png" alt="Dr. Luna">
             </div>
-            <div>
+            <div class="failure-about">
                 <h2 class="failure-section-heading">My failures of previous year</h2>
-                <p class="failure-section-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-                <ul>
-                    <li>Contrary to popular belief, is not simply.</li>
-                    <li>Contrary to popular belief.</li>
-                    <li>Contrary to popular , is not simply.</li>
-                    <li>Contrary to popular belief, is not simply.</li>
-                    <li>Contrary to popular simply.</li>
+                <p class="failure-section-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard Mc Clinton.</p>
+                <ul class="failure-ul-list">
+                    <li class="failure-about-list"><i class="fa-solid fa-check tick-mark"></i> Contrary to popular belief, is not simply.</li>
+                    <li class="failure-about-list"><i class="fa-solid fa-check tick-mark"></i> Contrary to popular belief.</li>
+                    <li class="failure-about-list"><i class="fa-solid fa-check tick-mark"></i> Contrary to popular , is not simply.</li>
+                    <li class="failure-about-list"><i class="fa-solid fa-check tick-mark"></i> Contrary to popular belief, is not simply.</li>
+                    <li class="failure-about-list"><i class="fa-solid fa-check tick-mark"></i> Contrary to popular simply.</li>
                 </ul>
+            </div>
+        </section>
+
+        <!-- My Plan Section -->
+        <section class="plan-section">
+            <div>
+                <h2 class="plan-header">My Plan</h2>
+                <div class="plan-skills">
+                    <div class="skill">
+                        <img src="images/icons/web.png" alt="">
+                        <h3 class="skill-header">Web Development</h3>
+                        <p class="skill-description">I want to start</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="">
+                        <h3 class="skill-header">JavaScript</h3>
+                        <p class="skill-description">I want to learn</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/smoke.png" alt="">
+                        <h3 class="skill-header">Smoking Habit</h3>
+                        <p class="skill-description">I want to quit</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/ecom.png" alt="">
+                        <h3 class="skill-header">E-Commerce</h3>
+                        <p class="skill-description">I want to Develop</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
