--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
                 </div>
             </div>
         </section>
+
+        <!-- Mindset section -->
+        <section class="mindset-section">
+            <div class="mindset">
+                <h2 class="mindset-header">Always keep a positive mindset</h2>
+                <button class="call-now-btn">Call Now</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
