--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Main Section Items -->
     <main>
+        
         <!-- Our Failure Section -->
         <section class="failure-section">
             <div class="bgc-img">
@@ -79,5 +80,25 @@
             </div>
         </section>
     </main>
+
+    <!-- Footer Section -->
+    <footer class="footer-section">
+        <div class="future">
+            <h2 class="future-heading">Future</h2>
+            <p class="future-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words.</p>
+            <p class="email-address">info@email.com</p>
+            <p class="phone-no">01*********</p>
+            <a class="social-media" href="#"><img src="images/icons/fb.png" alt=""></a>
+            <a class="social-media" href="#"><img src="images/icons/twitter.png" alt=""></a>
+            <a class="social-media" href="#"><img src="images/icons/youtube.png" alt=""></a>
+        </div>
+        <div class="subscribe-side">
+            <h3 class="subscribe-header">Subscribe</h3>
+            <form action="#">
+                <input type="email" placeholder="Enter your email" id="name" name="name">
+                <button class="subscribe-btn">Subscribe</button>
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
